# aplus

./: LICENSE  README
CMC010/: README  fix.csh
CMC010/001002/: bcindx.bas  bcwork.bas  bcwork.com  examhe.bas  filcon.bas  icg.b2s  icg.hlp  inter1.bas  inter2.bas  layout.bas  ppnbld.bas  profix.bas  prtwek.bas  varint.bas  xxx.bas  ziptot.bas
CMC010/001003/: adjent.bas  chart1.bas  chart2.bas  ckdata.bas  cktota.bas  custom.bas  gl.bas  glprnt.bas  isam.bas  jobs.bas  menu.bas  oldisamro.bas  pahold.bas  payreg.bas  po.bas  prstmt.bas  sort.bas  vendor.bas  wipacc.bas
CMC010/001004/: achist.lay  addres.lay  adjent.lay  ap.doc  assets.lay  backup.lay  bcacc.lay  bldunq.cmd  chart.lay  chrtzz.lay  ckdata.lay  conern.lay  conmst.lay  conpay.lay  conunr.lay  conwcr.lay  custom.lay  est.lay  expird.lay  genled.doc  gl.doc  gl.lay  hour.lay  invdet.lay  invmst.lay  job.lay  jobsho.lay  mstrfl.lay  mstrfl.lyt  payabl.doc  payabl.lay  payrol.lay  paysub.lay  pcsord.lay  pendng.lay  plog.lay  po.lay  portre.bas  price.lay  prwcr.lay  (+16 more)
CMC010/001005/: 1100.bas  bacli2.bas  baclis.bas  bcr.bas  bcr1.bas  dsklab.bas  listit.b2s  prback.bas  prkb0.bas  weklis.bas
CMC010/001006/: bldunq.b2s  bldunq.cnl  cvtcmd.b2s  edituq.b2s  edituq.cnl  examhx.bas  icg.b2s  icg.cnl  icg.hlp  invpr3.b2s  isam.bas  isam.edt  isam19.b2s  isam29.b2s  isamr9.b2s  isamrd.bas  isamro.b2s  isamrw.b2s  isamx9.b2s  ismbld.b2s  ismcap.bas  ismcln.b2s  ismcln.cnl  ismind.b2s  ismsrt.bas  ismutl.b2s  ismutl.cnl  menu.b2s  menu.cnl  menu.fil  pprep.b2s  prnt.ctl  repre1.b2s  spl.b2s  sysint.b2s  wpscvt.bas
CMC010/001008/: con941.bas  conc90.bas  conc91.bas  conc92.bas  concbn.bas  conce1.bas  conded.bas  cone90.bas  cone91.bas  cone92.bas  conent.bas  confrm.bas  conmon.bas  conmst.bas  conmuc.bas  conmuv.bas  connew.bas  conpa1.bas  conpa2.bas  conpc2.bas  conpnb.bas  conpr2.bas  conprc.bas  conprr.bas  conpru.bas  conpsm.bas  conpx1.bas  conpx2.bas  conti1.bas  contip.bas  contot.bas  contre.bas  contrn.bas  conw2f.bas  conwcr.bas  conytd.bas  hour.bas  prclen.bas  prunup.bas  showw2.bas  (+4 more)
CMC010/001042/: menu.fil  pwjinv.b2s  pwjinv.frm  pwjmnt.b2s  pwjrep.bas  pwjsal.b2s
CMC010/001060/: ansi.bas  bldcmd.bac  bldcmd.bas  cdir.c  change.txt  cpm.bas  edtini.edt  epson.bac  epson.bas  force.bas  ftbvt.bac  ftbvt.bas  la210.bac  la210.bas  la50.bac  la50.bas  mmread.bas  p.bas  pan.bac  pan.bas  prime.b2s  prime.bas  prime.c  sieve.bas  telad.bas
CMC010/001201/: bankbl.bas
CMC020/: README
CMC020/001006/: ad.mnu  ap.mnu  apchk.frm  ar.mnu  arcon.mnu  arstmt.frm  atk.mnu  attach.frm  bank.mnu  bom.mnu  dskmat.mnu  gl.mnu  ic.mnu  icaudt.mnu  invoic.frm  invtag.frm  paychk.frm  payreq.mnu  pbs.mnu  pc.mnu  pcs.mnu  pr.mnu  prcont.mnu  reserv.mnu  rsfrm.frm  sample.mnu  sjl.mnu  sp.mnu  spchk.frm  temp.mnu  time.frm  wip.mnu  wo.mnu
CMC020/002000/: addres.bas  device.bas  progr1.bas  progr2.bas  progr3.bas  progr4.bas  progr5.bas  progr6.bas  progrm.bas  prsrch.bas  rep5.bas  sumhis.bas  sumrhi.bas
CMC020/002001/: age.b2s  ageday.b2s  arage.b2s  arage.cnl  arage1.b2s  arage1.cnl  arage2.b2s  arage2.cnl  araged.b2s  araged.cnl  aragef.b2s  aragef.cnl  arager.b2s  arager.cnl  arages.b2s  arages.cnl  arana1.b2s  arana2.b2s  arana2.cnl  araud1.b2s  araud2.b2s  araud4.b2s  araud4.cnl  arauds.b2s  araudt.b2s  araudt.cnl  araudu.b2s  archng.b2s  arclo1.b2s  arclos.b2s  arcvt.b2s  areqv.b2s  arjcvt.b2s  aropen.b2s  aropen.cnl  arqury.b2s  arqury.cnl  arreg.b2s  arreg.lay  arreg1.b2s  (+134 more)
CMC020/002003/: acctbl.bas  pr.mnu  work.lay
CMC020/002005/: apage.b2s  apaged.b2s  apaud2.b2s  apaud2.cnl  apccln.b2s  apclos.b2s  apclos.cnl  apcshr.b2s  apcvt.b2s  apeqv.b2s  aphist.b2s  apjbrg.b2s  apjou1.b2s  apjou1.cmd  apjou1.cnl  apjou1.odl  apjou2.b2s  apjou3.b2s  apjou3.cnl  apjou4.b2s  apjou4.cmd  apjou4.cnl  apjou4.odl  apopen.b2s  apopen.cnl  apopen.lay  apqur1.b2s  apqury.b2s  apqury.cnl  apreg.b2s  apreg1.b2s  (+40 more)
CMC030/: README  makeall.com  update.kermit
CMC040/: Doxyfile  Makefile.am  NOTES  README  cmcfun.h  configure.ac  createtvl  database.h  dbtest.cc  makeall  makeworld  preferences.h  scopedef.h
CMC040/cmcfun/: assg_makebatch.cc  assg_unmakebatch.cc  comp_string.cc  database.cc  date_3select.cc  date_daycode.cc  date_dayofweek.cc  date_invdcode.cc  date_storedate.cc  date_today.cc  dspl_scroll.cc  dspl_scrollcir.cc  dspl_splitcursor.cc  entr_3badkey.cc  entr_3choice.cc  entr_3date.cc  entr_3enter.cc  entr_3entrystring.cc  entr_3message.cc  entr_3messagenewwindow.cc  entr_3number.cc  entr_3option.cc  entr_3string.cc  entr_3stringlist.cc  entr_3time.cc  entr_3yesno.cc  entr_4entry.cc  entr_4specialkeys.cc  entr_macro.cc  entr_period.cc  find_3printgroupitem.cc  find_file.cc  find_fileexists.cc  func_4scoseq.cc  func_round.cc  help_34message.cc  help_3message.cc  libr_3insert.cc  libr_delete.cc  libr_digsr.cc  (+43 more)
CMC040/smg/: README  lbr.h  lbr_get_record.cc  lbr_lookup_key.cc  lbr_open.cc  lib.h  lib_set_symbol.cc  libr_get_record.cc  smg.h  smg_begin_display_update.cc  smg_begin_pasteboard_update.cc  smg_change_pbd_characteristics.cc  smg_create_pasteboard.cc  smg_create_virtual_display.cc  smg_create_virtual_keyboard.cc  smg_cursor_column.cc  smg_cursor_row.cc  smg_delete_virtual_display.cc  smg_draw_line.cc  smg_end_display_update.cc  smg_end_pasteboard_update.cc  smg_erase_display.cc  smg_erase_line.cc  smg_flush_buffer.cc  smg_get_broadcast_message.cc  smg_get_display_attr.cc  smg_label_botder.cc  smg_paste_virtual_display.cc  smg_pop_virtual_display.cc  smg_put_chars.cc  smg_put_virtual_display_encoded.cc  smg_read_keystroke.cc  smg_read_string.cc  smg_repaint_screen.cc  smg_ring_bell.cc  smg_set_broadcast_trapping.cc  smg_set_cursor_abs.cc  smg_set_cursor_mode.cc  smg_set_term_characteristics.cc  smg_sewt_cursor_abs.cc
CMC040/tk/: tk_spec_checkline.cc  tk_spec_inlibbat.cc
CMC040/utl/: testbatch.cc  ut_spec_amortization.cc  utl_profile.h  utl_report.cc  utl_report.h  utl_report_sys.h  utl_report_sys.sql  utl_reportx.h  utl_set.h  utl_sysrep.h
CMC040/vmsdump/: un_report.bas
CMC050/: README
(+5625 files in other folders)
